fix css btn-success on mobile

--- a/css/new-header.styl
+++ b/css/new-header.styl
@@ -20,6 +20,8 @@
         box-shadow: inset 0 0 0 1px #FFFFFF;
         color: #FFFFFF;
 
+      .btn-success
+        margin-bottom: 20px;
       h1
         text-align: center
         width: 100%
